--- a/desafios/ex12b/style.css
+++ b/desafios/ex12b/style.css
@@ -4,9 +4,24 @@
     margin: 0px;
     padding: 0px;
 }
+
+@font-face {
+    font-family: face;
+    src: url('.//fontes/PassionOne-Regular.ttf') format('truetype');
+}
+
+@import url('https://fonts.googleapis.com/css2? family= Sriracha & display=swap');
+
+:root{
+    ---fonte1:Verdana, Geneva, Tahoma, sans-serif;
+    ---fonte2:'face', cursive;
+    ---fonte3: 'Sriracha', cursive;
+}
+
 html,body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: 
 }
 header{
     background-color:black;
@@ -16,7 +31,9 @@ header{
 header > h1{ 
     padding-top: 50px;
     font-variant: small-caps;
-    
+    font-family: var(---fonte2);
+    font-size: 10vw;
+    font-weight: normal;
 }
 header > P{
     padding-bottom: 50px;
@@ -35,11 +52,15 @@ section{
     padding-bottom: 10vh;
     line-height:2em ;
     padding-left: 30px;
+    font-size: 3.5vw;
+    font-family: var(---fonte3);
+    font-weight: normal;
 }
 
 section.imagem>p {
     background-color: rgba(0, 0, 0, 0.353);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 section.normal{
@@ -47,8 +68,10 @@ section.normal{
     color: black;
 }
 section.imagem{
+
     background-color: rgb(53, 52, 52);
     color: white;
+    padding: 5px;
 }
 
 footer p{
@@ -56,4 +79,6 @@ footer p{
     color: white;
     text-align: center;
     padding: 10px;
+    font-family: var(---fonte1);
+    font-weight: normal;
 }
